--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -50,7 +50,7 @@ h6 {
 a {
   color: $slate05;
   text-decoration: none;
-  border-bottom: solid 0.1em rgba($blue02, 0.5);
+  border-bottom: solid 0.1em rgba($blue02, 0.6);
 
   &:hover {
     color: $slate05;
@@ -171,6 +171,7 @@ header {
       display: block;
       color: $grey04;
       font-weight: bold;
+      letter-spacing: 0.06em;
       text-transform: uppercase;
       border-bottom: none;
 
