--- a/src/site/assets/css/main.css
+++ b/src/site/assets/css/main.css
@@ -511,7 +511,7 @@ h6 {
 a {
   color: #0a0d0f;
   text-decoration: none;
-  border-bottom: solid 0.1em rgba(56, 103, 214, 0.5);
+  border-bottom: solid 0.1em rgba(56, 103, 214, 0.6);
 }
 
 a:hover {
@@ -578,7 +578,7 @@ hr {
 
 .page .row {
   width: 100%;
-  max-width: 60rem;
+  max-width: 54rem;
   margin: 0 auto;
 }
 
@@ -632,6 +632,7 @@ header nav a {
   display: block;
   color: rgba(10, 13, 15, 0.4);
   font-weight: bold;
+  letter-spacing: 0.06em;
   text-transform: uppercase;
   border-bottom: none;
 }
