--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -22,7 +22,6 @@ body {
   line-height: 1.5;
 }
 
-
 h1 {
   font-size: $font-size * 2.5;
   line-height: 1.25;
@@ -44,13 +43,13 @@ h3,
 h4,
 h5,
 h6 {
-  margin: 1.5em 0 0.5em;
+  margin: 2em 0 0.5em;
 }
 
 a {
   color: $slate05;
   text-decoration: none;
-  border-bottom: solid 0.1em rgba($blue02, 0.6);
+  border-bottom: solid 0.1em rgba($blue02, 0.75);
 
   &:hover {
     color: $slate05;
@@ -83,17 +82,17 @@ table {
 }
 
 tr {
-  th {
-    background: rgba($slate01, 0.2);
-    text-align: left;
-    border-bottom: 1px solid $grey01;
-    padding: $font-size;
-  }
-
+  th,
   td {
     text-align: left;
+    vertical-align: top;
+    padding: $font-size * 0.5 $font-size;
     border-bottom: 1px solid $grey01;
-    padding: ($font-size * 0.5) $font-size;
+  }
+
+  th {
+    background: rgba($slate01, 0.2);
+    font-weight: normal;
   }
 
   &:last-child td {
@@ -185,7 +184,7 @@ header {
 }
 
 main {
-  padding: $font-size * 3 0;
+  padding: $font-size * 3 0 $font-size * 6;
 }
 
 .post-list {
