--- a/src/site/assets/css/main.css
+++ b/src/site/assets/css/main.css
@@ -505,13 +505,13 @@ h3,
 h4,
 h5,
 h6 {
-  margin: 1.5em 0 0.5em;
+  margin: 2em 0 0.5em;
 }
 
 a {
   color: #0a0d0f;
   text-decoration: none;
-  border-bottom: solid 0.1em rgba(56, 103, 214, 0.6);
+  border-bottom: solid 0.1em rgba(56, 103, 214, 0.75);
 }
 
 a:hover {
@@ -543,17 +543,17 @@ table {
   width: 100%;
 }
 
-tr th {
-  background: rgba(209, 218, 225, 0.2);
-  text-align: left;
-  border-bottom: 1px solid rgba(10, 13, 15, 0.1);
-  padding: 1.6rem;
-}
-
+tr th,
 tr td {
   text-align: left;
-  border-bottom: 1px solid rgba(10, 13, 15, 0.1);
+  vertical-align: top;
   padding: 0.8rem 1.6rem;
+  border-bottom: 1px solid rgba(10, 13, 15, 0.1);
+}
+
+tr th {
+  background: rgba(209, 218, 225, 0.2);
+  font-weight: normal;
 }
 
 tr:last-child td {
@@ -644,7 +644,7 @@ header nav a:hover {
 }
 
 main {
-  padding: 4.8rem 0;
+  padding: 4.8rem 0 9.6rem;
 }
 
 .post-list {
