--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -49,12 +49,11 @@ h6 {
 a {
   color: $slate05;
   text-decoration: none;
-  border-bottom: solid 0.1em rgba($blue02, 0.75);
+  border-bottom: solid 0.15em rgba($blue02, 0.5);
 
   &:hover {
-    color: $slate05;
     text-decoration: none;
-    border-bottom: solid 0.1em $blue02;
+    border-bottom: solid 0.15em $blue02;
   }
 }
 
@@ -76,7 +75,7 @@ blockquote {
 
 table {
   border-spacing: 0;
-  border: 1px solid $grey01;
+  border: 0.1rem solid $grey01;
   border-radius: 0.6rem;
   width: 100%;
 }
@@ -87,7 +86,7 @@ tr {
     text-align: left;
     vertical-align: top;
     padding: $font-size * 0.5 $font-size;
-    border-bottom: 1px solid $grey01;
+    border-bottom: 0.1rem solid $grey01;
   }
 
   th {
@@ -181,8 +180,7 @@ header {
 
       &:hover {
         color: $slate05;
-        border-bottom: solid 0.1em rgba($blue02, 1);
-        margin-bottom: -0.1em;
+        border-bottom: none;
       }
     }
   }
