--- a/src/site/_includes/post_list.liquid
+++ b/src/site/_includes/post_list.liquid
@@ -5,7 +5,7 @@
   {% for post in filtered_posts %}
     <li>
       <a href="{{ post.url }}">{{ post.data.title }}</a>
-      <span class="post-date">{{ post.date | date: "%B %e, %Y" }}</span>
+      <span class="post-date">{{ post.date | date: "%B %e" }}</span>
     </li>
   {% endfor %}
 </ul>
